--- a/facts.html
+++ b/facts.html
@@ -3,7 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>первый сайт</title>
+    <title>Интересные факты</title>
+    <meta name="keywords" content="первый сайт, евгений касперский">
+    <meta name="description" content="мой первый сайт про евгения касперского">
+    <link rel="icon" type="image/ico" sizes="32x32" href="icons/favicon.ico">
+    <link rel="icon" type="image/ico" sizes="16x16" href="icons/favicon.ico">
+    <link rel="shortcut icon" href="icons/favicon.ico">
+    <meta property="og:title" content="интересные факты">
+    <meta property="og:site_name" content="сайт о евгении касперском">
+    <meta property="og:url" content="https://artem1792.github.io/first-site/">
+    <meta property="og:description" content="мой первый сайт про евгения касперского">
+    <meta property="og:image" content="https://artem1792.github.io/first-site/img/ek-answers-questions-featured.jpg">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
